istio-local-service-mesh/applications/kustomize/overlays/production/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: task-tracker-app
  namespace: istio-system
spec:
  hosts:
  - servicemesh.demo
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        exact: /task-tracker-app-ui
    route:
    - destination:
        host: task-tracker-app-ui
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
     - "*"
